# swf-transform

./: README.md  build.sh  build_hook.py  pyproject.toml
conf/: prompt.conf
lib/swf_transform/conf/: prompt.conf
lib/swf_transform/prompt/: conf.py  payload_process.py  transformer.py  utils.py  version.py
lib/swf_transform/prompt/brokers/: activemq.py
tools/prompt/make/: make.sh  zipheader
