[build-system]
requires = [
  "setuptools>=61.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "swf-transform"
version = "2.0.0"
description = "Worker wrapper to process STF slice messages and forward results into the Panda pipeline."
readme = "README.md"
license = { file = "LICENSE" }
authors = [ { name = "IRIS-HEP Team" } ]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
]

dependencies = [
  "stomp.py",
  "idds-common",
  "cachetools",
]

[project.urls]
Documentation = "https://github.com/HSF/iDDS/wiki"
Source = "https://github.com/HSF/iDDS"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "lib"

[tool.setuptools.packages.find]
where = ["lib"]
include = ["swf_transform*"]

[tool.setuptools.cmdclass]
# This doesn't directly work in pyproject.toml, but we document it here.
# To run the build hook, use: python build_hook.py && pip install .
# Or create a Makefile/build script that calls build_hook.py first.
